--- a/src/app/usuarios/components/user-list/user-list.component.scss
+++ b/src/app/usuarios/components/user-list/user-list.component.scss
@@ -1,6 +1,6 @@
 .allBody{
     width: 100%;
-    height: 100vh;
+    height: 90%;
     background-color: rgb(246, 246, 246);
     .container{
         .card{
