--- a/src/app/usuarios/components/create-user/create-user.component.scss
+++ b/src/app/usuarios/components/create-user/create-user.component.scss
@@ -1,7 +1,7 @@
 .allBody{
     width: 100%;
-    height: 100vh;
     background-color: rgb(246, 246, 246);
+    height: 90%;
     .container{
         .card{
             top: 50px !important;
