--- a/src/app/catalogos/components/catalogo-main/catalogo-main.component.html
+++ b/src/app/catalogos/components/catalogo-main/catalogo-main.component.html
@@ -1,33 +1,1 @@
-<mat-drawer-container class="bg-light" autosize>
-        <mat-drawer #drawer mode="side">
-            <ul class="list-group">
-                <li class=" bg-secondary text-white" style="">Usuarios</li>
-                <li class="list-group-item" routerLink="/usuarios-panel/create-user" routerLinkActive="active">Nuevo usuario</li>
-                <li class="list-group-item" routerLink="/usuarios-panel/user-list" routerLinkActive="active">Lista de usuarios</li>
-                <li class=" bg-secondary text-white" style="">CATALOGOS</li>
-                <li class="list-group-item" routerLink="/catalogos-panel/civil-status" routerLinkActive="active">Civil Status</li>
-                <li class="list-group-item" routerLink="/catalogos-panel/meeting-category" routerLinkActive="active">Categorias de citas</li>
-                <li class="list-group-item" routerLink="/catalogos-panel/type-meetings" routerLinkActive="active">Tipos de citas</li>
-                <li class="list-group-item" routerLink="/catalogos-panel/consulting-rooms" routerLinkActive="active">Consultorios / clínicas</li>
-                <li class="list-group-item" routerLink="/catalogos-panel/profile" routerLinkActive="active">Perfiles</li>
-                <li class="list-group-item" routerLink="/catalogos-panel/type-user" routerLinkActive="active">Tipo de usuarios</li>
-            </ul>
-        </mat-drawer>
-    
-        <div style="height: 100vh;">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light" style="height: 10vh;">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <button type="button" mat-button (click)="drawer.toggle()">
-                            <mat-icon>menu</mat-icon>
-                        </button>
-                    </li>
-                </ul>
-                <span class="navbar-text">
-                    <button mat-button (click)="salir()">Salir</button>
-                </span>
-            </nav>
-            <router-outlet style="height: 90vh;"></router-outlet>
-        </div>
-    
-    </mat-drawer-container>
+<router-outlet></router-outlet>
